--- a/UFO-level-1/StarterCode/index.html
+++ b/UFO-level-1/StarterCode/index.html
@@ -32,7 +32,7 @@
             <div class="panel panel-default">
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
-                <form>
+                <form id="ufoform">
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
@@ -44,6 +44,8 @@
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
+
+
               </div>
             </div>
           </aside>
