--- a/UFO-level-2/StarterCode/index.html
+++ b/UFO-level-2/StarterCode/index.html
@@ -31,7 +31,7 @@
           <aside class="filters">
             <div class="panel panel-default">
             
- <!-- //////////////////////////////////////////////////////////////////// -->           
+ <!-- ////////////////////////datetime search//////////////////////////////////////////// -->           
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
                 <form id="ufoform-datetime">
@@ -47,7 +47,7 @@
                   <button id="filter-btn-datetime" type="button" class="btn btn-default">Filter Table</button>
                 </form>
               </div>
-<!-- //////////////////////////////////////////////////////////////////// -->
+<!-- /////////////////////city search/////////////////////////////////////////////// -->
               <div class="panel-heading"></div>
               <div class="panel-body">
                 <form id="ufoform-city">
@@ -62,7 +62,7 @@
                   <button id="filter-btn-city" type="submit" class="btn btn-default">Filter by City </button>
                 </form>
               </div>
- <!-- //////////////////////////////////////////////////////////////////// -->           
+ <!-- ////////////////////state search//////////////////////////////////////////////// -->           
               <div class="panel-heading"></div>
               <div class="panel-body">
                 <form id="ufoform-state">
@@ -77,7 +77,7 @@
                   <button id="filter-btn-state" type="submit" class="btn btn-default">Filter by State </button>
                 </form>
               </div>
-<!-- //////////////////////////////////////////////////////////////////// -->
+<!-- /////////////////Country search/////////////////////////////////////////////////// -->
               <div class="panel-heading"></div>
               <div class="panel-body">
                 <form id="ufoform-country">
@@ -93,7 +93,7 @@
                 </form>
               </div>
 
-<!-- //////////////////////////////////////////////////////////////////// -->
+<!-- /////////////////Shape Search////////////////////////////////////////////////// -->
               <div class="panel-heading"></div>
               <div class="panel-body">
                 <form id="ufoform-shape"> 
