--- a/UFO-level-2/StarterCode/index.html
+++ b/UFO-level-2/StarterCode/index.html
@@ -27,11 +27,11 @@
     </div>
     <div class="container">
       <div class="row margin-top-50">
-        <div class="col-md-2">
-          <aside class="filters">
+        <div class="col-md-3">
+          <aside class="filters" style="width: auto;">
             <div class="panel panel-default">
-            
- <!-- ////////////////////////datetime search//////////////////////////////////////////// -->           
+
+              <!-- ////////////////////////datetime search//////////////////////////////////////////// -->
               <div class="panel-heading">Filter Search</div>
               <div class="panel-body">
                 <form id="ufoform-datetime">
@@ -39,81 +39,133 @@
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2010">
-            
-                      </li>
-                    </ul>
-                  </div>
-                  <button id="filter-btn-datetime" type="button" class="btn btn-default">Filter Table</button>
-                </form>
-              </div>
-<!-- /////////////////////city search/////////////////////////////////////////////// -->
-              <div class="panel-heading"></div>
-              <div class="panel-body">
-                <form id="ufoform-city">
-                  <div class="form-group">
-                    <ul class="list-group" id="cityfilters">
-                      <li class="filter list-group-item">
-                        <label for="date">Enter a City</label>
-                        <input class="form-control" id="cityname" type="text" placeholder="anchorage">
-                      </li>
-                    </ul>
-                  </div>
-                  <button id="filter-btn-city" type="submit" class="btn btn-default">Filter by City </button>
-                </form>
-              </div>
- <!-- ////////////////////state search//////////////////////////////////////////////// -->           
-              <div class="panel-heading"></div>
-              <div class="panel-body">
-                <form id="ufoform-state">
-                  <div class="form-group">
-                    <ul class="list-group" id="statefilters">
-                      <li class="filter list-group-item">
-                        <label for="state">Enter a State</label>
-                        <input class="form-control" id="statename" type="text" placeholder="ca">
-                      </li>
-                    </ul>
-                  </div>
-                  <button id="filter-btn-state" type="submit" class="btn btn-default">Filter by State </button>
-                </form>
-              </div>
-<!-- /////////////////Country search/////////////////////////////////////////////////// -->
-              <div class="panel-heading"></div>
-              <div class="panel-body">
-                <form id="ufoform-country">
-                  <div class="form-group">
-                    <ul class="list-group" id="countryfilters">
-                      <li class="filter list-group-item">
-                        <label for="country">Enter a Country</label>
-                        <input class="form-control" id="countryname" type="text" placeholder="us">
-                      </li>
-                    </ul>
-                  </div>
-                  <button id="filter-btn-country" type="submit" class="btn btn-default">Filter by Country </button>
-                </form>
-              </div>
 
-<!-- /////////////////Shape Search////////////////////////////////////////////////// -->
-              <div class="panel-heading"></div>
-              <div class="panel-body">
-                <form id="ufoform-shape"> 
-                  <div class="form-group">
-                    <ul class="list-group" id="shapefilters">
-                      <li class="filter list-group-item">
+                        <select class="form-control" id="datetime" name="date" size="1">
+                          <option disabled selected value> -- select a date -- </option>
+
+                          <option value="1/1/2010">1/1/2010</option>
+                          <option value="1/2/2010">1/2/2010</option>
+                          <option value="1/3/2010">1/3/2010</option>
+                          <option value="1/4/2010">1/4/2010</option>
+                          <option value="1/4/2010">1/4/2010</option>
+                          <option value="1/5/2010">1/5/2010</option>
+                          <option value="1/6/2010">1/6/2010</option>
+                          <option value="1/7/2010">1/7/2010</option>
+                          <option value="1/8/2010">1/8/2010</option>
+                          <option value="1/9/2010">1/9/2010</option>
+                          <option value="1/10/2010">1/10/2010</option>
+                          <option value="1/11/2010">1/11/2010</option>
+                          <option value="1/12/2010">1/12/2010</option>
+                          <option value="1/13/2010">1/13/2010</option>
+                        </select>
+
+
+
+                        <label for="date">Enter a City</label>
+                        <input class="form-control" id="cityname" type="text" placeholder="">
+
+                        <label for="state">Enter a State</label>
+                        <select class="form-control" id="statename" name="state" size="1">
+                          <option disabled selected value> -- select a state -- </option>
+                          <option value="AK">AK</option>
+                          <option value="AL">AL</option>
+                          <option value="AR">AR</option>
+                          <option value="AZ">AZ</option>
+                          <option value="CA">CA</option>
+                          <option value="CO">CO</option>
+                          <option value="CT">CT</option>
+                          <option value="DC">DC</option>
+                          <option value="DE">DE</option>
+                          <option value="FL">FL</option>
+                          <option value="GA">GA</option>
+                          <option value="HI">HI</option>
+                          <option value="IA">IA</option>
+                          <option value="ID">ID</option>
+                          <option value="IL">IL</option>
+                          <option value="IN">IN</option>
+                          <option value="KS">KS</option>
+                          <option value="KY">KY</option>
+                          <option value="LA">LA</option>
+                          <option value="MA">MA</option>
+                          <option value="MD">MD</option>
+                          <option value="ME">ME</option>
+                          <option value="MI">MI</option>
+                          <option value="MN">MN</option>
+                          <option value="MO">MO</option>
+                          <option value="MS">MS</option>
+                          <option value="MT">MT</option>
+                          <option value="NC">NC</option>
+                          <option value="ND">ND</option>
+                          <option value="NE">NE</option>
+                          <option value="NH">NH</option>
+                          <option value="NJ">NJ</option>
+                          <option value="NM">NM</option>
+                          <option value="NV">NV</option>
+                          <option value="NY">NY</option>
+                          <option value="OH">OH</option>
+                          <option value="OK">OK</option>
+                          <option value="OR">OR</option>
+                          <option value="PA">PA</option>
+                          <option value="RI">RI</option>
+                          <option value="SC">SC</option>
+                          <option value="SD">SD</option>
+                          <option value="TN">TN</option>
+                          <option value="TX">TX</option>
+                          <option value="UT">UT</option>
+                          <option value="VA">VA</option>
+                          <option value="VT">VT</option>
+                          <option value="WA">WA</option>
+                          <option value="WI">WI</option>
+                          <option value="WV">WV</option>
+                          <option value="WY">WY</option>
+                        </select>
+
+
+                        <label for="country">Enter a Country</label>
+                        <select class="form-control" id="countryname" name="country" size="1" value="">
+                          <option disabled selected value> -- select a country -- </option>
+                          <option value="US">US</option>
+                        </select>
+
+
                         <label for="shape">Enter a Shape</label>
-                        <input class="form-control" id="shapename" type="text" placeholder="sphere">
+                        <select class="form-control" id="shapename" name="shape" size="1" value="">
+                          <option disabled selected value> -- select a shape -- </option>
+                          <option value="changing">changing</option>
+                          <option value="chevron">chevron</option>
+                          <option value="cigar">cigar</option>
+                          <option value="circle">circle</option>
+                          <option value="cross">cross</option>
+                          <option value="cylinder">cylinder</option>
+                          <option value="disk">disk</option>
+                          <option value="fireball">fireball</option>
+                          <option value="flash">flash</option>
+                          <option value="formation">formation</option>
+                          <option value="light">light</option>
+                          <option value="other">other</option>
+                          <option value="oval">oval</option>
+                          <option value="rectangle">rectangle</option>
+                          <option value="sphere">sphere</option>
+                          <option value="teardrop">teardrop</option>
+                          <option value="triangle">triangle</option>
+                          <option value="unknown">unknown</option>
+                        </select>
+
+
+
                       </li>
+
                     </ul>
                   </div>
                   <button id="filter-btn-shape" type="submit" class="btn btn-default">Filter by Shape </button>
                 </form>
               </div>
-<!-- //////////////////////////////////////////////////////////////////// -->
+              <!-- ////////////////////////datetime search//////////////////////////////////////////// -->
 
             </div>
           </aside>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9">
           <div id="table-area" class="">
             <table id="ufo-table" class="table table-striped">
               <thead>
