--- a/UFO-level-2/StarterCode/index.html
+++ b/UFO-level-2/StarterCode/index.html
@@ -157,7 +157,7 @@
                   <button id="filter-btn-filter" type="submit" class="btn btn-default">Filter by Shape </button>
                   
                 </form>
-                <button id="filter-btn-all-data" type="button" class="btn btn-default">Show All Data </button>
+                <!-- <button id="filter-btn-all-data" type="button" class="btn btn-default">Show All Data </button> -->
               </div>
               <!-- ////////////////////////datetime search//////////////////////////////////////////// -->
 
