--- a/UFO-level-2/StarterCode/index.html
+++ b/UFO-level-2/StarterCode/index.html
@@ -155,9 +155,9 @@
                     </ul>
                   </div>
                   <button id="filter-btn-filter" type="submit" class="btn btn-default">Filter by Shape </button>
-                  
+                  <button id="filter-btn-all-data" type="button" class="btn btn-default">Show All Data </button>           
                 </form>
-                <!-- <button id="filter-btn-all-data" type="button" class="btn btn-default">Show All Data </button> -->
+
               </div>
               <!-- ////////////////////////datetime search//////////////////////////////////////////// -->
 
