--- a/UFO-level-1/StarterCode/index.html
+++ b/UFO-level-1/StarterCode/index.html
@@ -12,22 +12,35 @@
 
 <body>
   <div class="wrapper">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">UFO Sightings
+    <nav class="navbar navbar-default navbar-light navbar-custom">
+      <div class="navbar-header" >
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#pointer-navbar-collapse-menu" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" id="bar-title" href="index.html">UFO Sightings
+
             <img class="nav-ufo" src="static/images/ufo.svg">
           </a>
-        </div>
       </div>
-    </nav>
+      <div class="collapse navbar-collapse" id="pointer-navbar-collapse-menu">
+          <ul class="nav navbar-nav navbar-right">
+              <li>
+                  <a href="harryxing@hotmail.com">Harry Xing's Homework</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
     <div class="hero text-center">
       <h1>UFO Sightings</h1>
       <p>The Truth is Out There</p>
     </div>
     <div class="container">
       <div class="row margin-top-50">
-        <div class="col-md-2">
+        <div class="col-md-3">
           <aside class="filters">
             <div class="panel panel-default">
 
@@ -39,9 +52,29 @@
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <label for="date">Select a Date</label>
+                        <!-- <input class="form-control" id="datetime" type="text" placeholder="1/11/2011"> -->
                         
+                        <select class="form-control" id="datetime" name="date" size="1">
+                          <option disabled selected value> -- select a date -- </option>
+
+                          <option value="1/1/2010">1/1/2010</option>
+                          <option value="1/2/2010">1/2/2010</option>
+                          <option value="1/3/2010">1/3/2010</option>
+                          <option value="1/4/2010">1/4/2010</option>
+                          <option value="1/4/2010">1/4/2010</option>
+                          <option value="1/5/2010">1/5/2010</option>
+                          <option value="1/6/2010">1/6/2010</option>
+                          <option value="1/7/2010">1/7/2010</option>
+                          <option value="1/8/2010">1/8/2010</option>
+                          <option value="1/9/2010">1/9/2010</option>
+                          <option value="1/10/2010">1/10/2010</option>
+                          <option value="1/11/2010">1/11/2010</option>
+                          <option value="1/12/2010">1/12/2010</option>
+                          <option value="1/13/2010">1/13/2010</option>
+                        </select>
+
+
                       </li>
                     </ul>
                   </div>
@@ -53,7 +86,7 @@
             </div>
           </aside>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-9">
           <div id="table-area" class="">
             <table id="ufo-table" class="table table-striped">
               <thead>
