--- a/UFO-level-1/StarterCode/index.html
+++ b/UFO-level-1/StarterCode/index.html
@@ -29,7 +29,7 @@
       <div class="collapse navbar-collapse" id="pointer-navbar-collapse-menu">
           <ul class="nav navbar-nav navbar-right">
               <li>
-                  <a href="harryxing@hotmail.com">Harry Xing's Homework</a>
+                  <a href="">Harry Xing's homework</a>
               </li>
           </ul>
       </div>
@@ -37,6 +37,8 @@
     <div class="hero text-center">
       <h1>UFO Sightings</h1>
       <p>The Truth is Out There</p>
+      <p>### Level 1: Automatic Table and Date Search.</p>
+      
     </div>
     <div class="container">
       <div class="row margin-top-50">
