--- a/UFO-level-2/StarterCode/index.html
+++ b/UFO-level-2/StarterCode/index.html
@@ -30,7 +30,7 @@
       <div class="collapse navbar-collapse" id="pointer-navbar-collapse-menu">
           <ul class="nav navbar-nav navbar-right">
               <li>
-                  <a href="harryxing@hotmail.com">Harry Xing's Homework</a>
+                <a href="">Harry Xing's homework</a>
               </li>
           </ul>
       </div>
@@ -39,6 +39,8 @@
     <div class="hero text-center">
       <h1>UFO Sightings</h1>
       <p>The Truth is Out There</p>
+      <p>### Level 2: Multiple Search Categories.</p>
+      
     </div>
     <div class="container">
       <div class="row margin-top-50">
